// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button default 1`] = `
<button
  className="btn"
  onClick={[Function]}
>
  With Text
</button>
`;

exports[`Storyshots Button with icon 1`] = `
<button
  className="btn"
  onClick={[Function]}
>
  <i
    className="material-icons"
  >
    +
  </i>
  With Icon
</button>
`;
